# taskflow-fastapi

./: .gitignore  README.md
backend/: .env.example  DEPLOYMENT.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: celery_tasks.py  errors.py  mail.py  main.py  middleware.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  project.py  task.py  users.py
backend/app/core/: config.py  jwt.py  limiter.py  security.py  utils.py
backend/app/db/: base.py  redis.py  session.py
backend/app/models/: authsession.py  projects.py  task.py  user.py
backend/app/repositories/: project.py  task.py  token_repo.py  user.py
backend/app/schemas/: auth.py  project.py  task.py  user.py
backend/app/services/: project.py  task.py  user.py
backend/frontend/: package-lock.json  package.json
backend/frontend/src/: main.jsx  styles.css
backend/migrations/: env.py
backend/migrations/versions/: 0a654f91c2b5_created_users_table.py  13afd8173a47_add_role_to_user_model.py  186edb507627_initial_migration.py  4137088a3466_add_role_to_user_model.py  479577c94cb8_updated_task.py  7a9831655d18_add_project_models.py  a1b2c3d4e5f6_create_missing_project_task_tables.py  d83fdd3338ef_add_project_tasks.py  f0e9bc0c67ce_add_project_tasks.py
backend/tests/: conftest.py  test_auth.py
frontend/src/: main.jsx  styles.css
