[project]
name = "taskflow-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi[all,standard]>=0.138.2",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]
